更改版面介紹

--- a/html檔/Home copy 4.html
+++ b/html檔/Home copy 4.html
@@ -175,7 +175,7 @@
             font-optical-sizing: auto;
             font-weight: 483;
             font-style: normal;
-            font-size: 130%;
+            font-size: 110%;
         }
 
         nav li:hover {
@@ -718,7 +718,7 @@
             height: 2px;
             background-color: #f2f3f7;
             left: 0;
-            bottom: 45.5%;
+            bottom: 45%;
         }
 
         .hr4 {
@@ -805,7 +805,7 @@
             /* transform: translateY(50px); */
             z-index: 23;
             padding: 20px 30px;
-            font-size: 25px;
+            font-size: 22px;
             line-height: 2;
         }
 
@@ -822,14 +822,14 @@
         .art1 {
             position: absolute;
             right: 2%;
-            bottom: 22%;
+            bottom: 13%;
             display: flex;
             text-align: justify;
         }
 
         .art2 {
             left: 2%;
-            bottom: 22%;
+            bottom: 13%;
             display: flex;
             text-align: justify;
         }
@@ -853,14 +853,14 @@
 
         .h3O {
             position: absolute;
-            top: 17%;
-            right: 7%;
+            top: 10%;
+            right: 15%;
         }
 
         .h3S {
             position: absolute;
-            left: 15%;
-            top: 18%;
+            left: 14%;
+            top: 12%;
         }
 
         .h3T {
@@ -882,7 +882,7 @@
             border-radius: 10px;
             color: #f2f3f7;
             font-size: 60px;
-            font-family: "Alegreya", serif;
+            font-family: "Alegreya", "Kaisei HarunoUmi", serif;
             font-optical-sizing: auto;
             font-weight: 550;
             font-style: italic;
@@ -1060,12 +1060,12 @@
         <nav id="nav" class="container">
             <ul id="navbox">
                 <li>
-                    <a href="Home copy 3.html">VESLUNEIR</a>
+                    <a href="Home copy 4.html">VESLUNEIR</a>
                     <hr>
-                    <p>攝影師一覽</p>
+                    <p>首頁</p>
                 </li>
                 <li>
-                    <a href="Photographer copy.html">PHOTOGRAPHER</a>
+                    <a href="Photographer copy 2.html">PHOTOGRAPHER</a>
                     <hr>
                     <p>攝影師一覽</p>
                 </li>
@@ -1179,9 +1179,9 @@
     <section id="infinite">
         <div class="marquee-wrapper">
             <div class="marquee" id="marquee">
-                <div class="marquee-item"><img src="/img/photp2_yu/yu8.jpg" alt="Image 1" /></div>
+                <div class="marquee-item"><img src="/img/photo2_yu/yu8.jpg" alt="Image 1" /></div>
                 <div class="marquee-item"><img src="/img/photo1_lily/lily4.jpg" alt="Image 2" /></div>
-                <div class="marquee-item"><img src="/img/photp2_yu/yu6.jpg" alt="Image 3" /></div>
+                <div class="marquee-item"><img src="/img/photo2_yu/yu6.jpg" alt="Image 3" /></div>
                 <div class="marquee-item"><img src="/img/photo1_lily/lily10.jpg" alt="Image 4" /></div>
                 <div class="marquee-item"><img src="/img/photo3_sophia/so3.jpg" alt="Image 5" /></div>
             </div>
@@ -1191,11 +1191,11 @@
 
         <div class="marquee-wrapper2">
             <div class="marquee2" id="marquee2">
-                <div class="marquee-item2"><img src="/img/photp2_yu/yu2.jpg" alt="Image 1" /></div>
+                <div class="marquee-item2"><img src="/img/photo2_yu/yu2.jpg" alt="Image 1" /></div>
                 <div class="marquee-item2"><img src="/img/photo1_lily/lily2.jpg" alt="Image 2" /></div>
                 <div class="marquee-item2"><img src="/img/photer2.jpg" alt="Image 3" /></div>
-                <div class="marquee-item2"><img src="/img/photp2_yu/yu3.jpg" alt="Image 4" /></div>
-                <div class="marquee-item2"><img src="/img/海灘兩人.jpg" alt="Image 5" /></div>
+                <div class="marquee-item2"><img src="/img/photo2_yu/yu3.jpg" alt="Image 4" /></div>
+                <div class="marquee-item2"><img src="/img/photo1_lily/lily14.jpg" alt="Image 5" /></div>
             </div>
         </div>
     </section>
@@ -1222,12 +1222,15 @@
             </div>
 
             <div class="h3O" style="width: auto;">
-                <h3>PHOTOGRAPHER</h3>
+                <h3>攝影師專區</h3>
             </div>
 
             <article id="article1" class="art1">
-                攝影師一覽如同一幅畫卷，輕柔地呈現攝影師的專業背景與創作風格。<br>
-                透過精選的作品與故事，讓觀眾感受到攝影師對光影與瞬間的詩意捕捉，並了解他們的藝術視野與服務特色。
+                我們為攝影師提供了一個展示自己作品的場所。攝影師可以輕鬆地創建和管理個人相冊，將自己的作品分享給更多人。無論是專業攝影師還是攝影愛好者，都可以在這裡展示創意和專業。<br>
+                主要功能：<br>
+                1. 上傳個人相冊<br>
+                2. 管理相冊<br>
+                3. 展示與分享<br>
             </article>
 
             <a href="Photographer copy.html" id="btn3" class="btn_02">前往攝影師專區</a>
@@ -1244,9 +1247,11 @@
         <section id="mainS">
 
             <article id="article2" class="art2">
-                相冊區猶如時光的匣子，將所有珍貴的瞬間細心收藏。
-                這裡展示的不僅是照片，更是故事與情感的結晶。<br>
-                觀眾可以穿越影像的世界，感受所有照片背後的深刻意境與美麗。
+                相簿區除了展示照片，還會根據不同的風格分類作品，為每位攝影師提供一個獨特的展示空間。無論是擅長拍攝婚禮、人像、風景還是其他類型的攝影，這裡都是展現攝影才華的最佳場所。<br>
+                主要功能：<br>
+                1. 風格分類<br>
+                2. 分享與互動<br>
+                3. 尋找靈感與合作<br>
             </article>
 
             <div id="rightimg" class="s6box2">
@@ -1274,15 +1279,18 @@
             </div>
 
             <div class="h3T">
-                <h3>ARTICLE</h3>
+                <h3>文章投稿</h3>
             </div>
 
             <article id="article3" class="art3">
-                文章區是攝影與文字的完美融合，將影像背後的故事與情感娓娓道來。<br>
-                在這裡，觀眾不僅能閱讀到關於攝影的深刻見解和創作經歷，還能通過投稿，將自己對光影與瞬間的詮釋傳遞出去，與他人共同分享攝影藝術的無限魅力與靈感。
+                無論是想分享攝影經歷、技術心得、器材評測，還是想發表有關攝影的創意文章，這裡都能提供一個良好的展示空間，也能與其他攝影師一同學習、交流。<br>
+                主要功能：<br>
+                1. 自由發表<br>
+                2. 豐富的文章分類<br>
+                3. 互動與討論<br>
             </article>
 
-            <a href="Article.html" id="btn3" class="btn_02">文章投稿</a>
+            <a href="Article.html" id="btn3" class="btn_02">文章一覽</a>
         </section>
 
         <div id="box"></div>
