--- a/html檔/Booking.html
+++ b/html檔/Booking.html
@@ -96,6 +96,9 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.5);
+            justify-self: center;
+            align-items: center;
+            text-align: center;
         }
 
         /* 彈出框內容樣式 */
@@ -171,7 +174,7 @@
             </div>
 
             <div class="form-group">
-                <label for="shooting-style">喜好風格</label>
+                <label for="shooting-style">喜好風格或需求</label>
                 <textarea id="shooting-style" name="shooting-style" placeholder="例如：日系、美式風格......"></textarea>
             </div>
 
@@ -190,7 +193,8 @@
             <div id="modal" class="modal">
                 <div class="modal-content">
                     <span class="close" onclick="closeModal()">&times;</span>
-                    <p>已為您預約，請靜候回覆</p>
+                    <p>已為您遞出預約給攝影師，請靜候回覆</p>
+                    <button id="yes">確認</button>
                 </div>
             </div>
         </form>
@@ -208,6 +212,7 @@
             const style = document.getElementById('style').value;
             const date = document.getElementById('date').value;
             const people = document.getElementById('people').value;
+            const button = document.getElementById('yes');
 
             // 防呆檢查
             if (!name || !email || !phone || !gender || !style || !date || !people) {
@@ -241,6 +246,10 @@
 
         // 提交表單後顯示彈出框
         document.getElementById('booking-form').addEventListener('submit', showModal);
+
+        document.getElementById('yes').addEventListener('click', function () {
+            closeModal(); // 調用已有的 closeModal 函數關閉彈出框
+        });
     </script>
 
 </body>
