--- a/html檔/LookBook.html
+++ b/html檔/LookBook.html
@@ -46,6 +46,7 @@
             margin: 0;
             padding: 0;
             min-height: 100vh;
+            font-family: "Alegreya", "Kaisei HarunoUmi", serif;
         }
 
         body a {
@@ -162,7 +163,7 @@
             /* 放在母項目下方 */
             right: 0;
             /* 與母項目右對齊 */
-            background-color: rgba(190, 235, 235, 0.8);
+            background-color: rgba(128, 165, 165, 0.8);
             border: 1px solid rgba(149, 199, 199, 0.9);
             border-radius: 3px;
             list-style: none;
@@ -306,6 +307,39 @@
         }
 
         /* ------------------- 1.文字 ------------------*/
+
+        .search-container {
+            display: flex;
+            align-items: end;
+            justify-self: end;
+            text-align: end;
+            margin-top: 6px;
+            margin-right: 5px;
+            margin-left: auto;
+            /* 讓整個容器靠右 */
+        }
+
+        .search-box {
+            padding: 8px;
+            width: 200px;
+            margin-right: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        .search-button {
+            padding: 8px 16px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .search-button:hover {
+            background-color: #0056b3;
+        }
+
         #s3 {
             width: 100%;
             display: flex;
@@ -348,8 +382,8 @@
         .container {
             margin-top: 2em;
             display: grid;
-            gap: 1.5rem;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         }
 
         .card {
@@ -628,10 +662,16 @@
 
     <!-------------------- 1. 文字介紹 ---------------------->
 
+    <div class="search-container">
+        <input type="text" id="search" name="search" placeholder="#Nature、#People" class="search-box">
+        <button type="submit" class="search-button">搜尋</button>
+    </div>
+
+
     <main>
 
         <section id="s3">
-            <h1>LookBook</h1>
+            <h1>相簿一覽</h1>
         </section>
 
 
@@ -647,8 +687,7 @@
                     <img src="/img/photo1_lily/lily3.jpg" alt="Awesome views">
                 </div>
                 <div class="tag">
-                    <a href="#">#Anamal</a>
-                    <a href="#">#Nature</a>
+                    <a href="#" id="tagpp">#Anamal</a>
                 </div>
             </div>
 
@@ -657,8 +696,8 @@
                     <img src="/img/photo1_lily/lily11.jpg" alt="Awesome views">
                 </div>
                 <div class="tag">
-                    <a href="#">#People</a>
-                    <a href="#">#Classical Style</a>
+                    <a href="#" id="tagpp">#People</a>
+                    <a href="#" id="tagpp">#Classical Style</a>
                 </div>
             </div>
 
@@ -667,8 +706,84 @@
                     <img src="/img/photo2_yu/yu6.jpg" alt="Hiking">
                 </div>
                 <div class="tag">
-                    <a href="#">#people</a>
-                    <a href="#">#Nature</a>
+                    <a href="#" id="tagpp">#People</a>
+                    <a href="#" id="tagpp">#Nature</a>
+                </div>
+            </div>
+
+            <div class="card" data-album="3">
+                <div class="imgBox">
+                    <img src="/img/Lemon.jpg" alt="Hiking">
+                </div>
+                <div class="tag">
+                    <a href="#" id="tagpp">#Nature</a>
+                </div>
+            </div>
+            <div class="card" data-album="3">
+                <div class="imgBox">
+                    <img src="/img/digice.JPG" alt="Hiking">
+                </div>
+                <div class="tag">
+                    <a href="#" id="tagpp">#Street</a>
+                </div>
+            </div>
+            <div class="card" data-album="3">
+                <div class="imgBox">
+                    <img src="/img/sakurasss.jpg" alt="Hiking">
+                </div>
+                <div class="tag">
+                    <a href="#" id="tagpp">#Street</a>
+                    <a href="#" id="tagpp">#Nature</a>
+                </div>
+            </div>
+            <div class="card" data-album="3">
+                <div class="imgBox">
+                    <img src="/img/coffee.jpg" alt="Hiking">
+                </div>
+                <div class="tag">
+                    <a href="#" id="tagpp">#View</a>
+                </div>
+            </div>
+            <div class="card" data-album="3">
+                <div class="imgBox">
+                    <img src="/img/river.jpeg" alt="Hiking">
+                </div>
+                <div class="tag">
+                    <a href="#" id="tagpp">#Street</a>
+                    <a href="#" id="tagpp">#Nature</a>
+                </div>
+            </div>
+            <div class="card" data-album="3">
+                <div class="imgBox">
+                    <img src="/img/towersakura.jpg" alt="Hiking">
+                </div>
+                <div class="tag">
+                    <a href="#" id="tagpp">#Street</a>
+                    <a href="#" id="tagpp">#Nature</a>
+                </div>
+            </div>
+            <div class="card" data-album="3">
+                <div class="imgBox">
+                    <img src="/img/euma.jpg" alt="Hiking">
+                </div>
+                <div class="tag">
+                    <a href="#" id="tagpp">#Street</a>
+                </div>
+            </div>
+            <div class="card" data-album="3">
+                <div class="imgBox">
+                    <img src="/img/bouennkyou.jpg" alt="Hiking">
+                </div>
+                <div class="tag">
+                    <a href="#" id="tagpp">#Street</a>
+                </div>
+            </div>
+            <div class="card" data-album="3">
+                <div class="imgBox">
+                    <img src="/img/jpmati.jpg" alt="Hiking">
+                </div>
+                <div class="tag">
+                    <a href="#" id="tagpp">#Street</a>
                 </div>
             </div>
         </div>
@@ -754,10 +869,23 @@
             });
         });
 
+        // 搜尋框
+        document.getElementById('search').addEventListener('focus', function () {
+            if (this.value === '') { // 確保當值為空時清除placeholder文字
+                this.placeholder = ''; // 清空placeholder
+            }
+        });
+
+        document.getElementById('search').addEventListener('blur', function () {
+            if (this.value === '') { // 如果搜尋框仍然是空的，恢復placeholder文字
+                this.placeholder = '#Nature、#People'; // 恢復預設文字
+            }
+        });
+
         //相冊
         const albumImages = {
             1: ["/img/photo1_lily/lily12.jpg", "/img/photo1_lily/lily13.jpg", "/img/photo1_lily/lily14.jpg", "/img/photo1_lily/lily15.jpg", "/img/photo1_lily/lily19.jpg", "/img/photo1_lily/lily7.jpg", "/img/photo1_lily/lily3.jpg", "/img/photo1_lily/lily21.jpg"],
-            2: ["/img/photo3_sophia/so3.jpg", "/img/book&camera.jpg", "/img/Lemon.jpg", "/img/tower2.jpeg", "/img/searock.jpg", "/img/moon.JPG"],
+            2: ["/img/photo3_sophia/so3.jpg", "/img/Lemon.jpg", "/img/tower2.jpeg", "/img/searock.jpg", "/img/moon.JPG"],
             3: ["/img/photo2_yu/yu1.jpg", "/img/photo2_yu/yu2.jpg", "/img/photo2_yu/yu3.jpg", "/img/photo2_yu/yu4.jpg", "/img/photo2_yu/yu5.jpg", "/img/photo2_yu/yu6.jpg"]
         };
 
